--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mainapi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -29,6 +28,14 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
-  
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NMINHDAI/mainApi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NMINHDAI/mainApi/issues"
+  },
+  "homepage": "https://github.com/NMINHDAI/mainApi#readme",
+  "description": ""
 }
