--- a/package.json
+++ b/package.json
@@ -1,41 +1,23 @@
 {
-  "name": "mainapi",
+  "name": "rest-api",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "express-async-errors": "^3.1.1",
-    "helmet": "^5.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.3",
+    "helmet": "^4.4.1",
+    "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "path": "^0.12.7",
-    "winston": "^3.5.1",
-    "winston-mongodb": "^5.0.7",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NMINHDAI/mainApi.git"
-  },
-  "bugs": {
-    "url": "https://github.com/NMINHDAI/mainApi/issues"
-  },
-  "homepage": "https://github.com/NMINHDAI/mainApi#readme",
-  "description": ""
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7"
+  }
 }
